...
        android:layout_weight="9"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:src="@drawable/emptyprofile"/>

    <EditText
        android:id="@+id/registration_activity_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="2"
        android:background="@null"
        android:gravity="center"
...
